bot-service (#9)
* update UI keyboard

* fix ui not working issue

* enrich tg UI buttons and miniapp functions

* fix web app issues, update buttons, clean code